--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2021, Daniel Treep</p>
     </footer>
