--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <li class="name">Daniel Treep</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
@@ -24,8 +25,8 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Who am I?</h2>
-        <p>My name is Daniel, I'm 25 years old and I'm aspiring to be a Front End Developer. I love to learn about  new things, skills and technologies.</p>
+        <h2>Some things about me</h2>
+        <p>My name is Daniel, I'm 25 years old and I'm aspiring to be a Front End Developer. I love to learn about new things, skills and technologies. The digital world is just as amazing as the real one.</p>
         <p>Besides coding, my favorite things to do are: sports, make music and experience the world while doing fun things with my friends.</p>
       </div> 
 
@@ -46,7 +47,7 @@
       <ul>
         <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2021, Daniel Treep</p>
+      <p class="copyright"><small> &copy; Copyright 2021, Daniel Treep</small></p>
     </footer>
   </body>
   </html>
