--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
           <li>Web Design</li>
         </ul>
         <p>I’d like to work as a Front End Developer and in the future create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
+        <img class="piano" src="images/piano.jpg" alt="Me playing the piano">
       </div> 
+
+      <div>
+        
+      </div>
 
     </main>
     <footer>
