--- a/index.html
+++ b/index.html
@@ -24,9 +24,21 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Some things about me</h2>
+        <h2>A little bit about me</h2>
         <p>My name is Daniel, I'm 25 years old and I'm aspiring to be a Front End Developer. I love to learn about new things, skills and technologies. The digital world is just as amazing as the real one.</p>
         <p>Besides coding, my favorite things to do are: sports, make music and experience the world while doing fun things with my friends.</p>      
+      </div> 
+
+      <div class="card">
+        <h2>Goals</h2>
+        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <ul class="card-list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Web Design</li>
+        </ul>
+        <p>I’d like to work as a Front End Developer and in the future create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
       </div> 
 
       <div class="card">
@@ -39,12 +51,10 @@
           <li>Web Design</li>
         </ul>
         <p>I’d like to work as a Front End Developer and in the future create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
-        <img class="piano" src="images/piano.jpg" alt="Me playing the piano">
       </div> 
-
-      <div>
-        
-      </div>
+      <!-- Still deciding... <div class="card">
+        <img class="piano" src="images/piano.jpg" alt="Me playing the piano">
+      </div> -->
 
     </main>
     <footer>
