--- a/experience.html
+++ b/experience.html
@@ -16,64 +16,62 @@
         </ul>
     </div>
 
-    <header>
-      <img src="images/me.jpg" alt="Photo of Daniel Treep" class="profile-image">
+    <header class="header-experience">
       <h1 class="tag name">Experience</h1>
-      <p class="tag location">Education and Work</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Education</h2>
-        <dl>
-          <dt><strong>Front End Development Techdegree Student</strong></dt> 
-                <dd>From: 09/2021 - Today</dd> 
-                <dd>At:   Treehouse</dd>  
+        <dl class="dl">
+          <dt><strong>End Development Techdegree Student</strong></dt> 
+                <dd>From: <em>09/2021 - Today</em></dd> 
+                <dd>At:   <em>Treehouse</em></dd>  
                 <br>
           <dt><strong>HBO Sportkunde</strong></dt> 
-                <dd>From: 09/2014 - 09/2019</dd> 
-                <dd>At:   Hogeschool InHolland</dd>
-
+                <dd>From: <em>09/2014 - 09/2019</em></dd> 
+                <dd>At:   <em>Hogeschool InHolland, Haarlem</em></dd>
+                <br>
           <dt><strong>HBO Tourism and Recreation</strong> </dt> 
-                <dd>From: 08/2013 - 07/2014</dd> 
-                <dd>At:   Hogeschool InHolland</dd> 
-
+                <dd>From: <em>08/2013 - 07/2014</em></dd> 
+                <dd>At:   <em>Hogeschool InHolland, Diemen</em></dd> 
+                <br>
           <dt><strong>HAVO Ecomonics and Society + Biology</strong></dt> 
-                <dd>From: 08/2008 - 05/2013</dd> 
-                <dd>At:   Kaj Munk College</dd>
+                <dd>From: <em>08/2008 - 05/2013</em></dd> 
+                <dd>At:   <em>Kaj Munk College, Hoofddorp</em></dd>
         </dl> 
         </div> 
 
       <div class="card">
         <h2>Work</h2>
         <dl>
-            <dt><strong>Waiter</strong></dt> 
-                <dd>From: 04/2019 - Today</dd> 
-                <dd>At:   HMS Host, Schiphol</dd>
-
-            <dt><strong>Intern</strong> </dt> 
-                <dd>From: 04/2018 - 07/2018</dd> 
-                <dd>At:   Val de Wanne, Aisomont &lpar;Belgium&rpar;
-                </dd> 
-
-            <dt><strong>Intern</strong></dt> 
-                <dd>From: 02/2018 - 04/2018</dd> 
-                <dd>At:   Ricardo van Rhijn Foundation, Leiden</dd>
-
+            <dt><strong>Full Service Waiter</strong></dt> 
+                <dd>From: <em>04/2019 - Today</em></dd> 
+                <dd>At:   <em>HMS Host, Schiphol</em></dd>
+                <br>
+            <dt><strong>Intern Activity Supervisor</strong> </dt> 
+                <dd>From: <em>04/2018 - 07/2018</em></dd> 
+                <dd>At:   <em>Val de Wanne, Aisomont</em></dd> 
+                <br>
+            <dt><strong>Intern Sporting Supervisor</strong></dt> 
+                <dd>From: <em>02/2018 - 04/2018</em></dd> 
+                <dd>At:   <em>Ricardo van Rhijn, Leiden</em></dd>
+                <br>
             <dt><strong>Supermarket Employee</strong></dt> 
-                <dd>From: 05/2012 - 05/2015</dd> 
-                <dd>At:   Dirk van den Broek, Hoofddorp</dd>
+                <dd>From: <em>05/2012 - 05/2015</em></dd> 
+                <dd>At:   <em>Dirk van den Broek, Hoofddorp</em></dd>
         </dl> 
         </div> 
-
+      <div>
+        <img src="images/work.jpg" alt="Daniel Treep serving beer" title="This is me serving some beer, cheers!" class="image">
+      </div>
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
+        <li><a href="https://linkedin.com" class="social linkedin" target="_blank">LinkedIn</a></li>
       </ul>
-      <p class="copyright">Copyright 2021, Daniel Treep</p>
+      <p class="copyright"><small>Copyright 2021, Daniel Treep</small></p>
     </footer>
   </body>
   </html>
