--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Daniel Treep | Profile</title>
+  <title>Daniel Treep | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -19,47 +19,42 @@
     <header>
       <img src="images/me.jpg" alt="Photo of Daniel Treep" class="profile-image">
       <h1 class="tag name">Hello, my name is Daniel.</h1>
-      <p class="tag location">I live in Hoofddorp, The Netherlands.</p>
+      <p class="tag welcome">Welcome to my page!</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>A little bit about me</h2>
-        <p>My name is Daniel, I'm 25 years old and I'm aspiring to be a Front End Developer. I love to learn about new things, skills and technologies. The digital world is just as amazing as the real one.</p>
-        <p>Besides coding, my favorite things to do are: sports, make music and experience the world while doing fun things with my friends.</p>      
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="card-list">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Web Design</li>
-        </ul>
-        <p>I’d like to work as a Front End Developer and in the future create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <h2>Who am I?</h2>
+        <p>I'm 25 years old and live in Hoofddorp, The Netherlands. I am currently studying at the Treehouse FEWD Techdegree. Besides coding, my favorite things to do are&colon;</p>
         <ul>
+          <li>Sports</li>
+          <li>Make music</li>
+          <li>Experience the world</li>
+        </ul>
+        <p>The digital world is just as amazing as the real one and I love to learn about new things, skills and technologies. </p>   
+      </div> 
+
+      <div class="card">
+        <h2>Goals</h2>
+        <p>I want to be able to build amazing web sites and therefore I am increasing my knowledge, skills and abilities in:</p>
+        <ul class="goals">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
           <li>Web Design</li>
         </ul>
-        <p>I’d like to work as a Front End Developer and in the future create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
+        <p>In the future I’d like to work as a Front End Developer and create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
       </div> 
-      <!-- Still deciding... <div class="card">
-        <img class="piano" src="images/piano.jpg" alt="Me playing the piano">
-      </div> -->
+
+      <div class="card">
+        <h2><q> The way to get started is to quit saying and begin doing.</q>- Walt Disney</h2>
+      </div>
 
     </main>
     <footer>
       <ul>
         <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
+        <li><a href="https://linkedin.com" class="social linkedin" target="_blank">LinkedIn</a></li>
       </ul>
       <p class="copyright"><small> &copy; Copyright 2021, Daniel Treep</small></p>
     </footer>
