--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>In the future I’d like to work as a Front End Developer and create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
       </div> 
 
-      <div class="card">
+      <div class="cardquote">
         <h2><q> The way to get started is to quit saying and begin doing.</q>- Walt Disney</h2>
       </div>
 
