Last commit before review

--- a/experience.html
+++ b/experience.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Daniel Treep</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header class="header-experience">
       <h1 class="tag name">Experience</h1>
@@ -24,7 +24,7 @@
       <div class="card">
         <h2>Education</h2>
         <dl class="dl">
-          <dt><strong>End Development Techdegree Student</strong></dt> 
+          <dt><strong>Front End Development Techdegree Student</strong></dt> 
                 <dd>From: <em>09/2021 - Today</em></dd> 
                 <dd>At:   <em>Treehouse</em></dd>  
                 
@@ -45,22 +45,22 @@
       <div class="card">
         <h2>Work</h2>
         <dl>
-          <div class="dt-br">
+          <div>
             <dt><strong>Full Service Waiter</strong></dt> 
                 <dd>From: <em>04/2019 - Today</em></dd> 
                 <dd>At:   <em>HMS Host, Schiphol</em></dd>
           </div>  
-          <div class="dt-br">    
+          <div>    
             <dt><strong>Intern Activity Supervisor</strong> </dt> 
                 <dd>From: <em>04/2018 - 07/2018</em></dd> 
                 <dd>At:   <em>Val de Wanne, Aisomont</em></dd> 
           </div>   
-          <div class="dt-br">    
+          <div>    
             <dt><strong>Intern Sporting Supervisor</strong></dt> 
                 <dd>From: <em>02/2018 - 04/2018</em></dd> 
                 <dd>At:   <em>Ricardo van Rhijn, Leiden</em></dd>
           </div>  
-          <div class="dt-br">  
+          <div>  
             <dt><strong>Supermarket Employee</strong></dt> 
                 <dd>From: <em>05/2012 - 05/2015</em></dd> 
                 <dd>At:   <em>Dirk van den Broek, Hoofddorp</em></dd>
@@ -74,9 +74,8 @@
     <footer>
       <ul>
         <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
-        <li><a href="https://linkedin.com" class="social linkedin" target="_blank">LinkedIn</a></li>
       </ul>
-      <p class="copyright"><small>Copyright 2021, Daniel Treep</small></p>
+      <p class="copyright"><small>&copy;Copyright 2021, Daniel Treep</small></p>
     </footer>
   </body>
   </html>
