--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Daniel Treep</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/me.jpg" alt="Photo of Daniel Treep" class="profile-image">
@@ -24,7 +24,7 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Who am I?</h2>
+        <h2>A little bit about me</h2>
         <p>I'm 25 years old and live in Hoofddorp, The Netherlands. I am currently studying at the Treehouse FEWD Techdegree. Besides coding, my favorite things to do are&colon;</p>
         <ul>
           <li>Sports</li>
@@ -36,7 +36,7 @@
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to be able to build amazing websites and therefore I am increasing my knowledge, skills and abilities in:</p>
+        <p>I want to be able to build amazing websites and therefore I am studying to develop my knowledge, skills and abilities in&colon;</p>
         <ul class="goals">
           <li>HTML</li>
           <li>CSS</li>
@@ -46,15 +46,14 @@
         <p>In the future I’d like to work as a Front End Developer and create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
       </div> 
 
-      <div class="cardquote">
-        <h2><q> The way to get started is to quit saying and begin doing.</q>- Walt Disney</h2>
+      <div class="quote">
+        <h2><q>The way to get started is to quit saying and begin doing.</q>- Walt Disney</h2>
       </div>
 
     </main>
     <footer>
       <ul>
         <li><a href="https://github.com/danieltreep" class="social github" target="_blank">Github</a></li>
-        <li><a href="https://linkedin.com" class="social linkedin" target="_blank">LinkedIn</a></li>
       </ul>
       <p class="copyright"><small> &copy; Copyright 2021, Daniel Treep</small></p>
     </footer>
