Final update before review

--- a/experience.html
+++ b/experience.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Education</h2>
         <dl class="dl">
           <dt><strong>Front End Development Techdegree Student</strong></dt> 
@@ -40,9 +40,9 @@
                 <dd>From: <em>08/2008 - 05/2013</em></dd> 
                 <dd>At:   <em>Kaj Munk College, Hoofddorp</em></dd>
         </dl> 
-        </div> 
+        </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Work</h2>
         <dl>
           <div>
@@ -66,10 +66,10 @@
                 <dd>At:   <em>Dirk van den Broek, Hoofddorp</em></dd>
           </div>
         </dl> 
-        </div> 
-      <div>
+      </section> 
+      <section>
         <img src="images/work.jpg" alt="Daniel Treep serving beer" title="This is me serving some beer, cheers!" class="image">
-      </div>
+      </section>
     </main>
     <footer>
       <ul>
