--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>A little bit about me</h2>
         <p>I'm 25 years old and live in Hoofddorp, The Netherlands. I am currently studying at the Treehouse FEWD Techdegree. Besides coding, my favorite things to do are&colon;</p>
         <ul>
@@ -32,9 +32,9 @@
           <li>Experience the world</li>
         </ul>
         <p>The digital world is just as amazing as the real one and I love to learn about new things, skills and technologies. </p>   
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I want to be able to build amazing websites and therefore I am studying to develop my knowledge, skills and abilities in&colon;</p>
         <ul class="goals">
@@ -44,11 +44,11 @@
           <li>Web Design</li>
         </ul>
         <p>In the future I’d like to work as a Front End Developer and create an online learning environment about the many wonderful places and cultures this world has to offer.</p>
-      </div> 
+      </section> 
 
-      <div class="quote">
+      <section class="quote">
         <h2><q>The way to get started is to quit saying and begin doing.</q>- Walt Disney</h2>
-      </div>
+      </section>
 
     </main>
     <footer>
