--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
 
     <nav class="main-nav">
-        <ul class="nav">
-          <li class="name">Daniel Treep</li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
-        </ul>
-    </nav>
+      <ul class="nav">
+        <li class="name">Daniel Treep</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+  </nav>
 
     <header>
       <img src="images/me.jpg" alt="Photo of Daniel Treep" class="profile-image">
